--- a/package.json
+++ b/package.json
@@ -13,18 +13,16 @@
     "test": "tests"
   },
   "scripts": {
-    "prepublishOnly": "npm run build && npm run test && npm run docs",
+    "prepublishOnly": "npm run build && npm run test",
     "build": "del lib && del .buildcache && tsc",
     "build:watch": "del lib && del .buildcache && tsc --watch",
-    "nodemon": "./node_modules/.bin/nodemon",
     "test": "jest --verbose --coverage --no-cache",
     "test:watch": "jest --watch",
     "ci:test": "jest --runInBand --ci --reporters=default --reporters=jest-junit --coverage --coverageDirectory=coverage",
     "format": "prettier --write \"{./src,./tests}/**/*\"",
     "fix:src": "eslint --fix \"./src/**/*.{js,jsx,ts,tsx}\"",
     "fix:tests": "eslint --fix \"./tests/**/*.{js,jsx,ts,tsx}\"",
-    "fix": "npm-run-all -p fix:*",
-    "docs": "del docs/api && typedoc --theme markdown --readme none --excludePrivate --excludeNotExported --out docs/api ./src"
+    "fix": "npm-run-all -p fix:*"
   },
   "repository": {
     "type": "git",
@@ -74,13 +72,10 @@
     "jest-junit": "^11.0.0",
     "jest-watch-typeahead": "^0.6.0",
     "lint-staged": "^10.0.2",
-    "nodemon": "^2.0.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.0",
     "standardx": "^7.0.0",
     "ts-jest": "^26.0.0",
-    "typedoc": "^0.20.0",
-    "typedoc-plugin-markdown": "^3.0.0",
     "typescript": "^4.0.0"
   },
   "dependencies": {}
